change default config

--- a/netuitive-agent.conf
+++ b/netuitive-agent.conf
@@ -50,10 +50,10 @@ keys = rotated_file
 [[NetuitiveHandler]]
 
 ### NetuitiveCloud URL to post the metrics
-url = http://spindlerdb.netuitive.com:20010/ingest/infrastructure
+url = https://api.app.netuitive.com/ingest/infrastructure
 
 ### NetuitiveClound Datasource api key
-api_key = fdb2557e136c022f4c37bb48f16129d1
+api_key = <valid api key> 
 
 ### Uncomment to add tags
 tags = tag1:tag1val, tag2:tag2val
